--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.1.2",
         "@vitejs/plugin-vue": "^6.0.1",
