--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.1.2",
         "@vitejs/plugin-vue": "^6.0.1",
+        "apexcharts": "^5.3.5",
         "date-fns": "^4.1.0",
         "lodash": "^4.17.21",
-        "vue": "^3.5.18"
+        "vue": "^3.5.18",
+        "vue3-apexcharts": "^1.10.0"
     }
 }
