--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mobile_app
-description: "A new Flutter project."
+description: "SPT Mobile - Construction Management System"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -31,20 +31,64 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI & Icons
   cupertino_icons: ^1.0.8
+
+  # State Management
+  flutter_riverpod: ^2.5.1
+
+  # API & Network
+  dio: ^5.4.0
+  pretty_dio_logger: ^1.3.1
+
+  # Storage
+  flutter_secure_storage: ^9.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.2.2
+
+  # Navigation
+  go_router: ^13.2.0
+
+  # Image & Media
+  cached_network_image: ^3.3.1
+  image_picker: ^1.0.7
+
+  # QR Code & Scanner
+  mobile_scanner: ^4.0.0
+  qr_flutter: ^4.1.0
+
+  # Push Notifications (Temporarily disabled for web testing)
+  # firebase_core: ^2.27.0
+  # firebase_messaging: ^14.7.10
+
+  # Location & Maps
+  geolocator: ^11.0.0
+  permission_handler: ^11.3.0
+
+  # UI Components & Utils
+  intl: ^0.19.0
+  flutter_spinkit: ^5.2.0
+  fluttertoast: ^8.2.4
+  pull_to_refresh: ^2.0.0
+  shimmer: ^3.0.0
+
+  # Other
+  path_provider: ^2.1.2
+  url_launcher: ^6.2.5
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # Lints
   flutter_lints: ^5.0.0
+
+  # Code Generation
+  build_runner: ^2.4.8
+  hive_generator: ^2.0.1
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,10 +101,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
