--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -67,11 +67,21 @@ dependencies:
   permission_handler: ^11.3.0
 
   # UI Components & Utils
-  intl: ^0.19.0
+  intl: ^0.20.0
   flutter_spinkit: ^5.2.0
   fluttertoast: ^8.2.4
   pull_to_refresh: ^2.0.0
   shimmer: ^3.0.0
+
+  # Modern Icons & Animations
+  iconsax_flutter: ^1.0.0
+  phosphor_flutter: ^2.1.0
+  flutter_animate: ^4.5.0
+  lottie: ^3.1.0
+
+  # Advanced UI Components
+  glassmorphism: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
 
   # Other
   path_provider: ^2.1.2
